@@ -1,6 +1,7 @@
 ; $Id$
 name = "Version Control API"
 description = "An interface to version control systems whose functionality is provided by pluggable back-end modules."
+dependencies[] = autoload
 package = Version Control
 core = 6.x
 php = 5.2
